--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "http-session-store",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "HTTP session store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "engines": {
     "node": ">=4.4.2"
@@ -14,10 +14,12 @@
     "url": "git+https://github.com/markusfuerer/http-session-store.git"
   },
   "author": "Markus Fürer",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.0",
-    "cookie": "^0.3.1",
     "redis": "^2.7.1"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0"
   }
 }
